--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
     "files.associations": {
-        "xstring": "c"
+        "xstring": "c",
+        "iostream": "cpp",
+        "ostream": "cpp",
+        "deque": "cpp",
+        "initializer_list": "cpp",
+        "list": "cpp",
+        "vector": "cpp",
+        "xiosbase": "cpp",
+        "xutility": "cpp"
     }
 }
